--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="id-card">
-      <p id="name"></p>
+      <p id="lastname"></p>
+      <p id="firstname"></p>
       <div id="inline">
         <p id="dob"></p>
         <p id="sex"></p>
